# SQL_Management_System

./: .gitignore  CMakeLists.txt  README.md  SERVER_TEST_GUIDE.md  development-status.md  simple_test.sh  test_concurrent_light.sh  test_server_concurrent.sh  test_server_quick.sh
docs/plans/: 2026-03-19-MiniSQL-Design.md  2026-03-19-MiniSQL-Implementation-Plan.md  2026-03-25-sql-parser-implementation.md  2026-03-26-executor-implementation.md  2026-03-27-optimizer-implementation.md  2026-03-28-advanced-select-implementation.md  2026-03-28-concurrency-transaction-design.md  2026-03-28-linux-server-implementation-plan.md
docs/superpowers/specs/: 2026-03-28-concurrency-transaction-design.md
src/: CMakeLists.txt  main.cpp
src/application/: CLIMode.cpp  CMakeLists.txt  MainWindow.cpp
src/client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  tcpclient.cpp  tcpclient.h
src/client/gui/: CMakeLists.txt
src/common/: CMakeLists.txt  Error.cpp  Error.h  Logger.cpp  Logger.h  Type.cpp  Type.h  Value.cpp  Value.h
src/executor/: AggregateOperator.cpp  AggregateOperator.h  CMakeLists.txt  DDLExecutor.cpp  DDLExecutor.h  DMLExecutor.cpp  DMLExecutor.h  ExecutionOperator.cpp  ExecutionOperator.h  Executor.cpp  Executor.h  Expression.cpp  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FilterOperator.cpp  FilterOperator.h  LimitOperator.cpp  LimitOperator.h  NestedLoopJoinOperator.cpp  NestedLoopJoinOperator.h  ProjectOperator.cpp  ProjectOperator.h  SortOperator.cpp  SortOperator.h  SubqueryScanOperator.cpp  SubqueryScanOperator.h  TableScanOperator.cpp  TableScanOperator.h
src/optimizer/: CMakeLists.txt  CostOptimizer.cpp  CostOptimizer.h  ExecutionPlan.h  Explain.cpp  ExplainHandler.cpp  ExplainHandler.h  IndexSelector.cpp  IndexSelector.h  Optimizer.cpp  PlanGenerator.cpp  PlanGenerator.h  QueryOptimizer.cpp  QueryOptimizer.h  QueryRewriter.cpp  QueryRewriter.h  RuleOptimizer.cpp  RuleOptimizer.h  Statistics.cpp  Statistics.h
src/parser/: AST.cpp  AST.h  CMakeLists.txt  Keywords.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Token.cpp  Token.h
src/server/: CMakeLists.txt  main_server.cpp
src/server/concurrency/: CMakeLists.txt  LockManager.cpp  LockManager.h  RWLock.h
src/server/network/: CMakeLists.txt  Reactor.cpp  Reactor.h  Session.h  SqlProtocol.cpp  SqlProtocol.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  ThreadPool.cpp  ThreadPool.h
src/server/transaction/: CMakeLists.txt  Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h  WALManager.cpp  WALManager.h
src/storage/: BPlusTree.cpp  BPlusTree.h  CMakeLists.txt  FileIO.cpp  FileIO.h  IndexManager.cpp  IndexManager.h  TableManager.cpp  TableManager.h
src/transaction/: CMakeLists.txt  Operation.cpp  TransactionManager.cpp
tests/: CMakeLists.txt  demo_file_creation.cpp  test_aggregate_operator.cpp  test_ast.cpp  test_common.cpp  test_cost_optimizer.cpp  test_ddl_executor.cpp  test_dml_executor.cpp  test_executor.cpp  test_explain.cpp  test_expression_evaluator.cpp  test_filter_operator.cpp  test_foreign_key.cpp  test_from_subquery.cpp  test_having.cpp  test_index_selector.cpp  test_integration.cpp  test_join.cpp  test_join_operator.cpp  test_lexer.cpp  test_limit_operator.cpp  test_parser.cpp  test_plan_generator.cpp  test_project_operator.cpp  test_query_rewriter.cpp  test_rule_optimizer.cpp  test_semantic.cpp  test_sort_operator.cpp  test_statistics.cpp  test_storage.cpp  test_subquery.cpp  test_table_scan.cpp  test_utils.cpp  test_utils.h
tests/server/: test_concurrency.cpp  test_network.cpp  test_transaction.cpp
